--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="header">
         <h1><strong>Josh Nolan</strong></h1>  
             <nav class="nav">
-                <a href="#About-Me">About Me</a>
+                <a href="#About-Me">About</a>
                 <a href="#Projects">Projects</a>
-                <a href="#Contact-Me">Contact Me</a>
+                <a href="#Contact-Me">Contact</a>
             </nav>
     </header>
 
@@ -25,7 +25,7 @@
         <section class="container-1">
             <h1><u><strong>About Me</strong></u></h1>
                 <section class="box-1">
-                    <h2><p>My name is Josh Nolan and my mission is to create interactive websites that are functional and aesthetically pleasing.</p></h2>
+                    <h2><p>My name is Josh Nolan<br>and my mission is to create<br>interactive websites.</p></h2>
                 </section>
         </section>
 
@@ -34,7 +34,7 @@
                 <h3><u><strong>Projects</strong></u></h3>
                     <div class="box-2" id="Project-One"><strong>Project One</strong>
                         <a href="https://github.com/Nolan1979/My-Portfolio">
-                        <img src="./Images/EGOnm.jpg" width="1300px" height="400px"></a>
+                        <img src="./Images/EGOnm.jpg" width="1000px" height="400px"></a>
                     </div>
             </section>
 
@@ -43,10 +43,12 @@
             <div class="box-3" id="Project-Two"><strong>Project Two</strong>
                 <a href="https://github.com/Nolan1979/My-Portfolio">
                 <img src="./Images/myaah.jpg" width="420px" height="400px"></a></div>
-            
+
+
             <div class="box-4" id="Project-Three"><strong>Project Three</strong>
                 <a href="https://github.com/Nolan1979/My-Portfolio">
                 <img src="./Images/c9.jpg" width="420px" height="400px"></a></div>
+
 
             <div class="box-5" id="Project-Four"><strong>Project Four</strong>
                 <a href="https://github.com/Nolan1979/My-Portfolio">
@@ -58,7 +60,6 @@
             <section id="Contact-Me"></section>
                 <ul>
                     <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
-                    <li><strong>instagram: hey_zeus_____________</strong></li>
                     <li><u><strong>mobile: 555.555.5555</strong></u></li>
                 </ul>
         </footer>
