added updated html ans css to repo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="container-1">
             <h1><u><strong>About Me</strong></u></h1>
                 <section class="box-1">
-                    <h2><p>My name is Josh Nolan<br>and my mission is to create<br>interactive websites.</p></h2>
+                    <p><strong>My name is Josh Nolan<br>and my mission is to create<br>interactive websites.</strong></p>
                 </section>
         </section>
 
