added comments to working files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Josh Nolan Portfolio</title>
 </head>
-
+        <!------------------------------Header with navbar------------------------------------->
 <body>
     <header class="header">
         <h1><strong>Josh Nolan</strong></h1>  
@@ -20,14 +20,19 @@
 
         <div class="hero"></div>
 
+
+        <!---------------------------------About Me Section------------------------------------------->
+
         <section id="About-Me"></section>
 
         <section class="container-1">
             <h1><u><strong>About Me</strong></u></h1>
                 <section class="box-1">
-                    <p><strong>My name is Josh Nolan<br>and my mission is to create<br>interactive websites.</strong></p>
+                    <p><strong>My name is Josh Nolan and my mission is to create interactive websites.</strong></p>
                 </section>
         </section>
+
+        <!------------------------Section Containing Projects with images and links to repo------------------->
 
         <section id="Projects"></section>
             <section class="container-2">
@@ -55,7 +60,7 @@
                 <img src="./Images/chocolate_chip.jpg" width="420px" height="400px"></a></div>
                 
         </section>
-
+        <!--------------------------Footer with Contact information--------------------------------------------->
         <footer class="footer">
             <section id="Contact-Me"></section>
                 <ul>
