added new images and lnks to projects. changed linear gradient

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="container-1">
         <h1><u><strong>About Me</strong></u></h1>
         <section class="box-1">
-            <p><strong>My name is Josh Nolan and my mission is to create web applications that provide solutions to real world problems.<br>(also I'd like own a boat)</strong></p>
+            <p><strong>My name is Josh Nolan and my mission is to create web applications that provide solutions to real world problems.(also I'd like own a boat)</strong></p>
         </section>
     </section>
 
@@ -42,8 +42,8 @@
     <div class="p1"><strong>Project One</strong></div>
     <section class="container-2" id="Projects">
         <div class="box-2">
-            <a href="https://github.com/Nolan1979/Josh-Nolan-Portfolio">
-                <img src="./Images/stumble2.jpg" width="1000px" height="800px"></a>
+            <a href="https://angelataylor87.github.io/Brewery-Finder/">
+                <img src="./Images/stumble3.jpg" width="1000px" height="800px"></a>
         </div>
     </section>
 
@@ -54,22 +54,22 @@
 
         <div class="box-3">
             <div><strong>Project Two</strong></div>
-            <a href="https://github.com/Nolan1979/Josh-Nolan-Portfolio">
-                <img src="./Images/myaah.jpg" width="420px" height="400px"></a>
+            <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/">
+                <img src="./Images/codingquiz.jpg" width="300px" height="400px"></a>
         </div>
 
 
         <div class="box-4">
             <div><strong>Project Three</strong></div>
-            <a href="https://github.com/Nolan1979/Josh-Nolan-Portfolio">
-                <img src="./Images/c9.jpg" width="420px" height="400px"></a>
+            <a href="https://nolan1979.github.io/Work-Day-Scheduler/">
+                <img src="./Images/worksched.jpg" width="420px" height="400px"></a>
         </div>
 
 
         <div class="box-5">
             <div><strong>Project Four</strong></div>
-        <a href="https://github.com/Nolan1979/Josh-Nolan-Portfolio">
-            <img src="./Images/chocolate_chip.jpg" width="420px" height="400px"></a>
+        <a href="https://nolan1979.github.io/Password-Generator/">
+            <img src="./Images/password.jpg" width="420px" height="400px"></a>
         </div>
     </section>
 
@@ -79,7 +79,7 @@
         <section id="Contact-Me"></section>
         <ul>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
-            <li><u><strong>mobile: 555.555.5555</strong></u></li>
+            <li><u><strong>mobile: 832.508.2611</strong></u></li>
         </ul>
     </footer>
 
