projects link to new tabs

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
         <div class="p1"><strong>Stumble:<br>A Brewery Locator</strong></div>
         <section class="container-2" id="Projects">
             <div class="box-2">
-                <a href="https://angelataylor87.github.io/Brewery-Finder/">
+                <a href="https://angelataylor87.github.io/Brewery-Finder/" target="blank">
                     <img src="./Images/stumble3.jpg"></a>
             </div>
         </section>
@@ -45,21 +45,21 @@
 
             <div class="box-3">
                 <div><strong>Coding Quiz Game</strong></div>
-                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/">
+                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target="blank">
                     <img src="./Images/codingquiz.jpg"></a>
             </div>
 
 
             <div class="box-4">
                 <div><strong>Work Scheduler</strong></div>
-                <a href="https://nolan1979.github.io/Work-Day-Scheduler/">
+                <a href="https://nolan1979.github.io/Work-Day-Scheduler/" target="blank">
                     <img src="./Images/worksched.jpg"></a>
             </div>
 
 
             <div class="box-5">
                 <div><strong>Password Generator</strong></div>
-                <a href="https://nolan1979.github.io/Password-Generator/">
+                <a href="https://nolan1979.github.io/Password-Generator/" target="blank">
                     <img src="./Images/password.jpg"></a>
             </div>
         </section>
