updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer class="footer">
         <section id="Contact-Me"></section>
         <ul>
-            <li> <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+            <li> <a href="www.linkedin.com/in/josh-nolan-5242a7129"
                     target="blank"><u><strong>LinkedIn</strong></u></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
             <li><u><strong>mobile: 832.508.2611</strong></u>
