added Github link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Josh Nolan Portfolio</title>
-    
+
 </head>
 
 
@@ -45,16 +45,16 @@
     <footer class="footer">
         <section id="Contact-Me"></section>
         <ul>
-            <li> <a href="www.linkedin.com/in/josh-nolan-5242a7129"
-                    target="blank"><u><strong>LinkedIn</strong></u></a>
+            <li> <a href="www.linkedin.com/in/josh-nolan-5242a7129" target="blank"><u><strong>LinkedIn</strong></u></a>
+            <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
             <li><u><strong>mobile: 832.508.2611</strong></u>
         </ul>
     </footer>
 
 
-    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script> 
-    
+    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
+
     <script src="script.js"></script>
 </body>
 
