added Github link

--- a/projects.html
+++ b/projects.html
@@ -72,11 +72,12 @@
         <ul>
             <li> <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
                     target="blank"><u><strong>LinkedIn</strong></u></a>
+            <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
             <li><u><strong>mobile: 832.508.2611</strong></u></li>
         </ul>
     </footer>
-    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
+    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
     <!-- <script src="./node_modules/swup/dist/swup.min.js"></script> -->
     <script src="script.js"></script>
 
