fixed broken link

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <footer class="footer">
         <section id="Contact-Me"></section>
         <ul>
-            <li> <a href="www.linkedin.com/in/josh-nolan-5242a7129" target="blank"><u><strong>LinkedIn</strong></u></a>
-            <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a>
-            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
-            <li><u><strong>mobile: 832.508.2611</strong></u>
+            <li> <a href="https://www.linkedin.com/in/josh-nolan-5242a7129" target="blank"><u><strong>LinkedIn</strong></u></a></li>
+            <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a></li>
+            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
+            <li><u><strong>mobile: 832.508.2611</strong></u></li>
         </ul>
     </footer>
 
