--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
         <section id="Contact-Me"></section>
         <ul>
             <li> <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
-                    target="blank"><u><strong>LinkedIn</strong></u></a>
+                    target="blank"><u><strong>LinkedIn</strong></u></a></li>
             <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
             <li><u><strong>mobile: 832.508.2611</strong></u></li>
