added resume link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2><u><strong>About Me</strong></u></h2>
             <section class="box-1">
                 <p><strong>My name is Josh Nolan and my mission is to create web applications that provide solutions to
-                        real world problems.(also I'd like to own a boat)</strong></p>
+                        real world problems. I enjoy painting and pancakes.<br>(also I'd like to own a boat)</strong></p>
             </section>
         </section>
     </main>
@@ -47,6 +47,7 @@
         <ul>
             <li> <a href="https://www.linkedin.com/in/josh-nolan-5242a7129" target="blank"><u><strong>LinkedIn</strong></u></a></li>
             <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a></li>
+            <li> <a href="Assets/Josh Nolan.pdf" target="_blank">Resume</a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
             <li><u><strong>mobile: 832.508.2611</strong></u></li>
         </ul>
