changed LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer class="footer">
         <section id="Contact-Me"></section>
         <ul>
-            <li> <a href="https://www.linkedin.com/in/josh-nolan-5242a7129" target="blank"><u><strong>LinkedIn</strong></u></a></li>
+            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="blank"><u><strong>LinkedIn</strong></u></a></li>
             <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a></li>
             <li> <a href="Assets/Josh Nolan.pdf" target="_blank">Resume</a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
