--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 
             <div class="box-3">
                 <div><strong>Coding Quiz Game</strong></div>
-                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target="blank">
+                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target_blank>
                     <img src="./Images/codingquiz.jpg"></a>
             </div>
 
@@ -70,7 +70,7 @@
     <footer class="footer">
         <section id="Contact-Me"></section>
         <ul>
-            <li> <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+            <li> <a href="https://www.linkedin.com/in/Josh-Nolan"
                     target="blank"><u><strong>LinkedIn</strong></u></a></li>
             <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
