--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>projects</title>
 </head>
@@ -72,7 +73,7 @@
         <ul>
             <li> <a href="https://www.linkedin.com/in/Josh-Nolan"
                     target="blank"><u><strong>LinkedIn</strong></u></a></li>
-            <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a>
+            <li> <a href="https://github.com/Nolan1979" target="blank"><i class="fab fa-github"></i></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
             <li><u><strong>mobile: 832.508.2611</strong></u></li>
         </ul>
