--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Josh Nolan Portfolio</title>
 
@@ -36,23 +37,24 @@
             <h2><u><strong>About Me</strong></u></h2>
             <section class="box-1">
                 <p><strong>My name is Josh Nolan and my mission is to create web applications that provide solutions to
-                        real world problems. I enjoy painting and pancakes.<br>(also I'd like to own a boat)</strong></p>
+                        real world problems. I enjoy painting and pancakes.<br>(also I'd like to own a boat)</strong>
+                </p>
             </section>
         </section>
     </main>
 
 
     <footer class="footer">
-        <section id="Contact-Me"></section>
+        <section id="Contact-Me">
         <ul>
-            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="blank"><u><strong>LinkedIn</strong></u></a></li>
-            <li> <a href="https://github.com/Nolan1979" target="blank"><u><strong>Github</strong></u></a></li>
+            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github' style='font-size:36px'></i></a>
             <li> <a href="Assets/Josh Nolan.pdf" target="_blank">Resume</a>
-            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
-            <li><u><strong>mobile: 832.508.2611</strong></u></li>
+            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
+            <li><u><strong>mobile: 832.508.2611</strong></u>
         </ul>
     </footer>
-
+</section>
 
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
 
