icon test success

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>Josh Nolan Portfolio</title>
 
 </head>
 
 
+
+
 <body>
-
-
     <header class="header">
         <h1><strong>Josh Nolan</strong></h1>
 
@@ -46,18 +47,20 @@
 
     <footer class="footer">
         <section id="Contact-Me">
-        <ul>
-            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github' style='font-size:36px'></i></a>
-            <li> <a href="Assets/Josh Nolan.pdf" target="_blank">Resume</a>
-            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
-            <li><u><strong>mobile: 832.508.2611</strong></u>
-        </ul>
+            <ul>
+                <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin'
+                            style='font-size:48px'></i></a>
+                <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github'
+                            style='font-size:48px'></i></a>
+                <li> <a href="Assets/Josh Nolan.pdf" target="_blank">Resume</a>
+                <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
+                <li><u><strong>mobile: 832.508.2611</strong></u>
+            </ul>
     </footer>
-</section>
+    </section>
 
+    
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
-
     <script src="script.js"></script>
 </body>
 
