--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>projects</title>
 </head>
@@ -39,9 +40,6 @@
             </div>
         </section>
 
-
-
-
         <section class="container-3">
 
             <div class="box-3">
@@ -71,9 +69,10 @@
     <footer class="footer">
         <section id="Contact-Me"></section>
         <ul>
-            <li> <a href="https://www.linkedin.com/in/Josh-Nolan"
-                    target="blank"><u><strong>LinkedIn</strong></u></a></li>
-            <li> <a href="https://github.com/Nolan1979" target="blank"><i class="fab fa-github"></i></a>
+            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin'
+                        style='font-size:48px'></i></a>
+            <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github'
+                        style='font-size:48px'></i></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
             <li><u><strong>mobile: 832.508.2611</strong></u></li>
         </ul>
