added new fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
@@ -38,7 +40,8 @@
             <h2><u><strong>About Me</strong></u></h2>
             <section class="box-1">
                 <p><strong>My name is Josh Nolan and my mission is to create web applications that provide solutions to
-                        real world problems. I enjoy painting and pancakes.<br>(also I'd like to own a boat)</strong>
+                        real world problems.<br><br> I enjoy painting and pancakes.<br>(also I'd like to own a
+                        boat)</strong>
                 </p>
             </section>
         </section>
@@ -59,7 +62,7 @@
     </footer>
     </section>
 
-    
+
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
     <script src="script.js"></script>
 </body>
