--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,9 @@
 
     <main id="swup" class="transition-fade">
 
-        <div class="p1"><strong>Stumble:<br>A Brewery Locator</strong></div>
-        <section class="container-2" id="Projects">
+        <section class="container-2">
             <div class="box-2">
+                <div><strong>Stumble:<br>A Brewery Locator</strong></div>
                 <a href="https://angelataylor87.github.io/Brewery-Finder/" target="blank">
                     <img src="./Images/stumble3.jpg"></a>
             </div>
