cleaned up code

--- a/index.html
+++ b/index.html
@@ -11,32 +11,23 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>Josh Nolan Portfolio</title>
-
 </head>
-
-
 
 
 <body>
     <header class="header">
         <h1><strong>Josh Nolan</strong></h1>
-
         <nav class="nav">
-            <ul>
-                <li><a href="./index.html">Home</a>
-                <li><a href="./projects.html">Projects</a>
-                <li><a href="#Contact-Me">Contact</a>
-            </ul>
+            <a href="./index.html">Home</a>
+            <a href="./projects.html">Projects</a>
         </nav>
-
     </header>
-    <main id="swup" class="transition-fade">
 
+
+    <main id="swup" class="transition-fade">
         <div id="About-Me"></div>
         <section class="container-1">
-
             <div class="hero"></div>
-
             <h2><u><strong>About Me</strong></u></h2>
             <section class="box-1">
                 <p><strong>My name is Josh Nolan and my mission is to create web applications that provide solutions to
@@ -48,19 +39,17 @@
     </main>
 
 
+
     <footer class="footer">
-        <section id="Contact-Me">
-            <ul>
-                <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin'
-                            style='font-size:48px'></i></a>
-                <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github'
-                            style='font-size:48px'></i></a>
-                <li> <a href="Assets/Josh Nolan.pdf" target="_blank">Resume</a>
-                <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
-                <li><u><strong>mobile: 832.508.2611</strong></u>
-            </ul>
+        <ul>
+            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin' style='font-size:48px'></i></a>
+            <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github' style='font-size:48px'></i></a>
+            <li> <a href="Assets/Josh Nolan.pdf" target="_blank">Resume</a>
+            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
+            <li><u><strong>mobile: 832.508.2611</strong></u>
+        </ul>
     </footer>
-    </section>
+
 
 
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
