--- a/projects.html
+++ b/projects.html
@@ -13,25 +13,16 @@
 
 
 <body>
-
-
     <header class="header">
         <h1><strong>Projects</strong></h1>
-
         <nav class="nav">
-            <ul>
-                <li><a href="./index.html">Home</a>
-                <li><a href="./projects.html">Projects</a>
-                <li><a href="#Contact-Me">Contact</a>
-            </ul>
+            <a href="./index.html">Home</a>
+            <a href="./projects.html">Projects</a>
         </nav>
-
     </header>
 
 
-
     <main id="swup" class="transition-fade">
-
         <section class="container-2">
             <div class="box-2">
                 <div><strong>Stumble:<br>A Brewery Locator</strong></div>
@@ -41,44 +32,36 @@
         </section>
 
         <section class="container-3">
-
             <div class="box-3">
                 <div><strong>Coding Quiz Game</strong></div>
                 <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target_blank>
                     <img src="./Images/codingquiz.jpg"></a>
             </div>
 
-
             <div class="box-4">
                 <div><strong>Work Scheduler</strong></div>
                 <a href="https://nolan1979.github.io/Work-Day-Scheduler/" target="blank">
                     <img src="./Images/worksched.jpg"></a>
             </div>
-
-
+            
             <div class="box-5">
                 <div><strong>Password Generator</strong></div>
                 <a href="https://nolan1979.github.io/Password-Generator/" target="blank">
                     <img src="./Images/password.jpg"></a>
             </div>
         </section>
-
-
     </main>
 
-    <footer class="footer">
-        <section id="Contact-Me"></section>
+    <footer class="footer" id="contact">
         <ul>
-            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin'
-                        style='font-size:48px'></i></a>
-            <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github'
-                        style='font-size:48px'></i></a>
+            <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin' style='font-size:48px'></i></a>
+            <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github' style='font-size:48px'></i></a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
             <li><u><strong>mobile: 832.508.2611</strong></u></li>
         </ul>
     </footer>
+
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
-    <!-- <script src="./node_modules/swup/dist/swup.min.js"></script> -->
     <script src="script.js"></script>
 
 </body>
