--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         <section class="container-3">
             <div class="box-3">
                 <div><strong>Coding Quiz Game</strong></div>
-                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target_blank>
+                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target="blank">
                     <img src="./Images/codingquiz.jpg"></a>
             </div>
 
