--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
@@ -17,7 +19,7 @@
         <h1><strong>Projects</strong></h1>
         <nav class="nav">
             <a href="./index.html">Home</a>
-            <a href="./projects.html">Projects</a>
+            
         </nav>
     </header>
 
@@ -56,8 +58,8 @@
         <ul>
             <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin' style='font-size:48px'></i></a>
             <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github' style='font-size:48px'></i></a>
-            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u></li>
-            <li><u><strong>mobile: 832.508.2611</strong></u></li>
+            <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
+            <li><u><strong>mobile: 832.508.2611</strong></u>
         </ul>
     </footer>
 
