projects html link

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
         <h1><strong>Projects</strong></h1>
         <nav class="nav">
             <a href="./index.html">Home</a>
-            
+            <a href="./projects.html">Projects</a>
         </nav>
     </header>
 
