--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         <section class="container-2">
             <div class="box-2">
                 <div><strong>Stumble:<br>A Brewery Locator</strong></div>
-                <a href="https://angelataylor87.github.io/Brewery-Finder/" target="blank">
+                <a href="https://angelataylor87.github.io/Brewery-Finder/" target="_blank">
                     <img src="./Images/stumble3.jpg"></a>
             </div>
         </section>
@@ -36,19 +36,19 @@
         <section class="container-3">
             <div class="box-3">
                 <div><strong>Coding Quiz Game</strong></div>
-                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target="blank">
+                <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target="_blank">
                     <img src="./Images/codingquiz.jpg"></a>
             </div>
 
             <div class="box-4">
                 <div><strong>Work Scheduler</strong></div>
-                <a href="https://nolan1979.github.io/Work-Day-Scheduler/" target="blank">
+                <a href="https://nolan1979.github.io/Work-Day-Scheduler/" target="_blank">
                     <img src="./Images/worksched.jpg"></a>
             </div>
             
             <div class="box-5">
                 <div><strong>Password Generator</strong></div>
-                <a href="https://nolan1979.github.io/Password-Generator/" target="blank">
+                <a href="https://nolan1979.github.io/Password-Generator/" target="_blank">
                     <img src="./Images/password.jpg"></a>
             </div>
         </section>
