edited projects page layout

--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,13 @@
     <main id="swup" class="transition-fade">
         <section class="container-2">
             <div class="box-2">
-                <div><strong>Stumble:<br>A Brewery Locator</strong></div>
+                <div><strong>A Brewery Locator</strong></div>
                 <a href="https://angelataylor87.github.io/Brewery-Finder/" target="_blank">
                     <img src="./Images/stumble3.jpg"></a>
             </div>
-        </section>
+        
 
-        <section class="container-3">
+        
             <div class="box-3">
                 <div><strong>Coding Quiz Game</strong></div>
                 <a href="https://nolan1979.github.io/Coding-Quiz-Challenge/" target="_blank">
