added weather app

--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,8 @@
 
             <div class="box-4">
                 <div><strong>Work Scheduler</strong></div>
-                <a href="https://nolan1979.github.io/Work-Day-Scheduler/" target="_blank">
-                    <img src="./Images/worksched.jpg"></a>
+                <a href="https://nolan1979.github.io/Weather-Dashboard/" target="_blank">
+                    <img src="./Images/WeatherDash.jpg"></a>
             </div>
             
             <div class="box-5">
