weather dashboard title fix

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="box-4">
-                <div><strong>Work Scheduler</strong></div>
+                <div><strong>Weather Dashboard</strong></div>
                 <a href="https://nolan1979.github.io/Weather-Dashboard/" target="_blank">
                     <img src="./Images/WeatherDash.jpg"></a>
             </div>
