added new projects/added and fixed contact link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <nav class="nav">
             <a href="./index.html">Home</a>
             <a href="./projects.html">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -39,7 +40,7 @@
 
 
 
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <ul>
             <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin' style='font-size:48px'></i></a>
             <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github' style='font-size:48px'></i></a>
