added updated resume

--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,7 @@
         <ul>
             <li> <a href="https://www.linkedin.com/in/Josh-Nolan" target="_blank"><i class='fab fa-linkedin' style='font-size:48px'></i></a>
             <li> <a href="https://github.com/Nolan1979" target="_blank"><i class='fab fa-github' style='font-size:48px'></i></a>
+            <li> <a href="Assets/Resume-Josh-Nolan (1).pdf" target="_blank">Resume</a>
             <li><u><strong>email: nolanjosh1979@gmail.com</strong></u>
             
         </ul>
